--- a/src/App.css
+++ b/src/App.css
@@ -196,8 +196,45 @@ body{
   color: white;
 }
 
+::selection{
+  background-color: var(--primaryColor);
+  color: white;
+}
 
+@media screen and (min-width: 769px){
+  .container{
+    width: 70%;
+    margin: auto;
+  }
+}
 
+@media screen and (min-width: 960px){
+  .section{
+    padding: 6rem 0 4rem;
+  }
+}
 
+@media screen and (min-width: 1240px){
+  .section{
+    padding: 6rem 0 4rem;
+  }
+
+  .container{
+    width: 70%;
+    margin: auto;
+  }
+}
+
+@media screen and (min-width: 1440px){
+  body{
+    zoom: 1;
+  }
+}
+
+@media screen and (min-width: 2560px){
+  body{
+    zoom: 1.7;
+  }
+}
 
 
