--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -104,4 +104,125 @@
             }
         }
     }
+
+    .leftIcon, .rigthEmail{
+        display: none;
+    }
+}
+
+@media screen and (min-width:480px){
+    .home{
+        .homeContainer{
+            padding: 5rem 1.5rem;
+            .introText{
+                font-size: 1.5rem;
+            }
+
+            .title{
+                font-size: 3.5rem;
+            }
+
+            .subTitle{
+                font-size: 2.1rem;
+            }
+
+            .homeParagraph{
+                font-size: 1.5rem;
+            }
+
+            .lowerHomeSectiion{
+                .contactBtn{
+                    padding: .8rem 1.5rem;
+                    a{
+                        font-size: 22px;
+                    }
+                }
+            }
+
+            .scrollDiv{
+                padding-top: 1.5rem;
+                .icon{
+                    font-size: 1.5rem;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 770px){
+    .home{
+        .homeContainer{
+            padding: 5rem 1.5rem;
+            width: 70%;
+            margin: auto;
+        }
+
+        .leftIcon, .rigthEmail{
+            display: block;
+            position: fixed;
+            .icon{
+                color: var(--secundariColor);
+            }
+
+            a{
+                font-weight: 600;
+                color: var(--secundariColor);
+            }
+
+            .line{
+                margin: auto;
+                content: '';
+                background: var(--secundariColor);
+                height: 100px;
+                width: 1px;
+            }
+            
+        }
+
+        .leftIcon{
+            left: 5%;
+            bottom: 0;
+            .socials{
+                gap: 1rem;
+                a{
+                    color: var(--textColor);
+                    &:hover{
+                        color: var(--primaryColor);
+                    }
+                }
+            }
+        }
+
+        .rigthEmail{
+            right: 0;
+            bottom: 0;
+            .emailAddress {
+                transform: rotate(90deg) translate(-90px, 0px);
+            }
+        }
+    }
+}
+
+@media screen and (min-width:1240px){
+    .home{
+        .homeContainer{
+            padding: 6rem;
+            .introText{
+                font-size: 1.5rem;
+            }
+
+            .title{
+                font-size: 5rem;    
+            }
+
+            .subTitle{
+                line-height: 2.5rem;
+                font-size: 2.4rem;
+            }
+
+            .homeParagraph{
+                font-size: 1.8rem;
+            }
+        }
+    }
 }
