--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -21,7 +21,6 @@
   height: var(--headerHeight);
   padding: 2rem;
   z-index: 1000;
-  background: var(--projectCardColor);
 }
 .header .logo a {
   color: var(--textColor);
@@ -86,6 +85,53 @@
 }
 
 .activeHeader {
-  background-color: red;
-  box-shadow: 0 2px 4px red;
+  background-color: var(--projectCardColor);
+  box-shadow: 0 2px 4px rgbe(1, 15, 29, 0.904);
+}
+
+@media screen and (min-width: 769px) {
+  .toggleNavbar, .closeNavbar {
+    display: none;
+  }
+  .header {
+    padding: 2.5rem 2rem;
+  }
+  .header .navBar .navLists {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    padding: 0 1rem;
+  }
+  .header .navBar .navLists .navItem {
+    padding: 0 0.8rem;
+  }
+  .header .navBar .navLists .navItem .navLink {
+    color: var(--textColor);
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+  .header .navBar .navLists .navItem .navLink:hover {
+    color: var(--primaryColor);
+  }
+  .header .navBar .navLists .navItem .navLink .headerNumber {
+    color: var(--primaryColor);
+  }
+  .header .navBar .navLists .btn {
+    margin-left: 0.5rem;
+  }
+  .header .navBar .navLists .btn a {
+    color: var(--primaryColor);
+  }
+}
+@media screen and (min-width: 960px) {
+  .header {
+    padding: 2.5rem 5rem;
+  }
+  .header .navBar .navLists {
+    padding: 0 2rem;
+  }
+  .header .navBar .navLists .navItem {
+    padding: 0 2rem;
+  }
 }/*# sourceMappingURL=Navbar.css.map */
