--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -70,4 +70,39 @@
 .projects .projectContainer .singleProject .technologies small {
   color: var(--secundariColor);
   font-weight: 600;
+}
+
+@media screen and (min-width: 600px) {
+  .projects {
+    width: 80%;
+    margin: auto;
+  }
+  .projects .projectContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 769px) {
+  .projects {
+    margin: auto;
+  }
+  .projects .projectContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 1150px) {
+  .projects .projectContainer {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .projects .projectContainer .singleProject .desc {
+    font-size: 17px;
+  }
+  .projects .projectContainer .singleProject .desc .technologies small {
+    font-size: 15px;
+  }
+}
+@media screen and (min-width: 1240px) {
+  .projects {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }/*# sourceMappingURL=Projetos.css.map */
